	is now ignored for S compatibility.  (Previously padding with
	NAs was used.)

	The "POSIXct" and "POSIXlt" methods for rep() now pass ... on
	to the default method (as expected by PR#5818).

    o	rgb2hsv() is new, an R interface the C API function with the same name.

    o	User hooks can be set for onLoad, library, detach and
	onUnload of packages/namespaces: see ?setHook.

    o	sink() now has a split= argument to direct output to both the
	sink and the current output connection.

    o	split.screen() now works for multiple devices at once.

    o	On some OSes (including Windows and those using glibc)
	strptime() did not validate dates correctly, so we have added
	extra code to do so.  However, this cannot correct scanning
	errors in the OS's strptime (although we have been able to
	work around these on Windows).	Some examples are now tested for
	during configuration.

    o	strsplit() now has `fixed' and `perl' arguments and
	split="" is optimized.

    o	subset() now allows a `drop' argument to remove unused factor
	levels.	 The default is still to keep them.

    o	termplot() has an option to smooth the partial residuals.

    o	varimax() and promax() add class "loadings" to their loadings
	component.


    o	Model fits now add a "dataClasses" attribute to the terms, which
	can be used to check that the variables supplied for
	prediction are of the same type as those used for fitting.
	(It is currently used by predict() methods for classes "lm",
	"mlm", "glm" and "ppr", as well as methods in packages MASS,
	rpart and tree.)

    o	New command-line argument --max-ppsize allows the size of the
	pointer protection stack to be set higher than the previous
	limit of 10000.

    o	The fonts on an X11() device (also jpeg() and png() on Unix)
	can be specified by a new argument `fonts' defaulting to the
	value of a new option "X11fonts".

    o	New functions in the tools package: pkgDepends, getDepList and