@@ -32,6 +32,13 @@ save <- function(..., list = character(0),
                  ascii = FALSE, version = NULL, envir = parent.frame(),
                  compress = FALSE)
 {
+    opts <- getOption("save.defaults")
+    if (missing(compress) && ! is.null(opts$compress))
+        compress <- opts$compress
+    if (missing(ascii) && ! is.null(opts$ascii))
+        ascii <- opts$ascii
+    if (missing(version)) version <- opts$version
+    
     names <- as.character( substitute( list(...)))[-1]
     list<- c(list, names)
     if (! is.null(version) && version == 1)
@@ -56,6 +63,8 @@ save.image <- function (file = ".RData", version = NULL, ascii = FALSE,
         stop("`file' must be non-empty string")
 
     opts <- getOption("save.image.defaults")
+    if(is.null(opts)) opts <- getOption("save.defaults")
+        
     if (missing(safe) && ! is.null(opts$safe))
         safe <- opts$safe
     if (missing(compress) && ! is.null(opts$compress))
