@@ -180,6 +180,10 @@ NEW FEATURES
     o	User hooks can be set for onLoad, library, detach and
 	onUnload of packages/namespaces: see ?setHook.
 
+    o   save() default arguments can now be set using option
+        "save.defaults", which is also used by save.image() if option
+        "save.image.defaults" is not present.
+
     o	sink() now has a split= argument to direct output to both the
 	sink and the current output connection.
 
